# fractal-tree

./: README.md  ToDo
Mesh/: block_i.pts  block_i.tris  slab.stl
Parameter-Config/: parameters-sphere-sample.py  parameters_block.py  parameters_bunny.py  parameters_lv.py  parameters_slab.py
Purkinje-Networks/: block-test.vtu  block-test_endnodes.txt  block-test_ien.txt  (+1 more)
Utils/VTK_Parser/: .gitignore  CMakeLists.txt
Utils/VTK_Parser/inputs/Patient-1/: LV_Purkinje_ien.txt  RV_Purkinje_endnodes.txt  RV_Purkinje_ien.txt
Utils/VTK_Parser/inputs/Patient-2/: LV_Purkinje_ien.txt
Utils/VTK_Parser/inputs/Patient-26/: LV_Purkinje_xyz.txt
Utils/VTK_Parser/inputs/Patient-3/: LV_Purkinje_ien.txt  RV_Purkinje_ien.txt  RV_Purkinje_xyz.txt
Utils/VTK_Parser/inputs/Rabbit/: LV-rabbit_ien.txt  LV-rabbit_xyz.txt  RV-rabbit_ien.txt  RV-rabbit_xyz.txt
Utils/VTK_Parser/inputs/Slab/: slab-test_endnodes.txt  slab-test_ien.txt  slab-test_xyz.txt
Utils/VTK_Parser/outputs/Patient-1/: Pat01-Bundle-His.vtk  Pat01-LV-Purkinje.vtk  Pat01-RV-Purkinje.vtk
Utils/VTK_Parser/outputs/Patient-2/: Bundle-His.vtk  LV-Purkinje.vtk  RV-Purkinje.vtk
Utils/VTK_Parser/outputs/Patient-26/: Bundle-His.vtk  LV-Purkinje.vtk  RV-Purkinje.vtk
Utils/VTK_Parser/outputs/Patient-3/: Bundle-His.vtk  LV-Purkinje.vtk  RV-Purkinje.vtk
Utils/VTK_Parser/outputs/Rabbit/: LV-rabbit.vtk  RV-rabbit.vtk
Utils/VTK_Parser/src/: main.cpp
Utils/VTK_Parser/src/utils/: utils.cpp  utils.h
Utils/VTK_Parser/src/vtk_polydata/: CMakeLists.txt  line.cpp  line.h  point.cpp  point.h  vtk_polydata.cpp  vtk_polydata.h
(+82 files in other folders)
